etape0_du_serveur/data/rules.v4
# Generated by iptables-save v1.6.0 on Mon Sep 26 08:00:55 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -m comment --comment "000 accept all icmp" -j ACCEPT
-A INPUT -i lo -m comment --comment "001 accept all to lo interface" -j ACCEPT
-A INPUT -m comment --comment "002 accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "010 allow ssh from admins network" -j ACCEPT
-A INPUT -m comment --comment "999 drop ALL" -j DROP
-A OUTPUT -p icmp -m comment --comment "000 Authorize all icmp" -j ACCEPT
-A OUTPUT -o lo -m comment --comment "001 Authorize all to lo interface" -j ACCEPT
-A OUTPUT -m comment --comment "002 Authorized related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 199.19.167.36/32 -p udp -m multiport --dports 123 -m comment --comment "300-123-NTP_0.ca.pool.ntp.org_-199.19.167.36--udp-123" -j ACCEPT
-A OUTPUT -d 199.85.124.148/32 -p udp -m multiport --dports 123 -m comment --comment "300-123-NTP_0.ca.pool.ntp.org_-199.85.124.148--udp-123" -j ACCEPT
-A OUTPUT -d 208.73.56.29/32 -p udp -m multiport --dports 123 -m comment --comment "300-123-NTP_0.ca.pool.ntp.org_-208.73.56.29--udp-123" -j ACCEPT
-A OUTPUT -d 216.234.161.11/32 -p udp -m multiport --dports 123 -m comment --comment "300-123-NTP_0.ca.pool.ntp.org_-216.234.161.11--udp-123" -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -p tcp -m multiport --dports 53 -m comment --comment "300-53-DNS-127.0.0.1--tcp-53" -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -p udp -m multiport --dports 53 -m comment --comment "300-53-DNS-127.0.0.1--udp-53" -j ACCEPT
-A OUTPUT -d 213.186.33.102/32 -p tcp -m multiport --dports 53 -m comment --comment "300-53-DNS-213.186.33.102--tcp-53" -j ACCEPT
-A OUTPUT -d 213.186.33.102/32 -p udp -m multiport --dports 53 -m comment --comment "300-53-DNS-213.186.33.102--udp-53" -j ACCEPT
-A OUTPUT -d 213.186.33.99/32 -p tcp -m multiport --dports 53 -m comment --comment "300-53-DNS-213.186.33.99--tcp-53" -j ACCEPT
-A OUTPUT -d 213.186.33.99/32 -p udp -m multiport --dports 53 -m comment --comment "300-53-DNS-213.186.33.99--udp-53" -j ACCEPT
-A OUTPUT -d 8.8.4.4/32 -p tcp -m multiport --dports 53 -m comment --comment "300-53-DNS-8.8.4.4--tcp-53" -j ACCEPT
-A OUTPUT -d 8.8.4.4/32 -p udp -m multiport --dports 53 -m comment --comment "300-53-DNS-8.8.4.4--udp-53" -j ACCEPT
-A OUTPUT -d 91.189.88.149/32 -p tcp -m multiport --dports 80 -m comment --comment "300-80-APT_-security.ubuntu.com--tcp-80" -j ACCEPT
-A OUTPUT -d 142.4.218.29/32 -p tcp -m multiport --dports 80 -m comment --comment "300-80-APT_-ubuntu.bhs.mirrors.ovh.net--tcp-80" -j ACCEPT
-A OUTPUT -d 216.239.32.0/19 -p tcp -m multiport --dports 80 -m comment --comment 600_google1 -j ACCEPT
-A OUTPUT -d 173.194.0.0/16 -p tcp -m multiport --dports 80 -m comment --comment 600_google10 -j ACCEPT
-A OUTPUT -d 172.217.0.0/20 -p tcp -m multiport --dports 80 -m comment --comment 600_google11 -j ACCEPT
-A OUTPUT -d 64.233.160.0/19 -p tcp -m multiport --dports 80 -m comment --comment 600_google2 -j ACCEPT
-A OUTPUT -d 66.249.80.0/20 -p tcp -m multiport --dports 80 -m comment --comment 600_google3 -j ACCEPT
-A OUTPUT -d 72.14.192.0/18 -p tcp -m multiport --dports 80 -m comment --comment 600_google4 -j ACCEPT
-A OUTPUT -d 209.85.128.0/17 -p tcp -m multiport --dports 80 -m comment --comment 600_google5 -j ACCEPT
-A OUTPUT -d 66.102.0.0/20 -p tcp -m multiport --dports 80 -m comment --comment 600_google6 -j ACCEPT
-A OUTPUT -d 74.125.0.0/16 -p tcp -m multiport --dports 80 -m comment --comment 600_google7 -j ACCEPT
-A OUTPUT -d 64.18.0.0/20 -p tcp -m multiport --dports 80 -m comment --comment 600_google8 -j ACCEPT
-A OUTPUT -d 207.126.144.0/20 -p tcp -m multiport --dports 80 -m comment --comment 600_google9 -j ACCEPT
-A OUTPUT -m comment --comment "998 log all output " -m state --state NEW -j LOG
-A OUTPUT -m comment --comment "999 drop ALL OUTGOING" -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Mon Sep 26 08:00:55 2016
